--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is the react minesweeper version by me!",
   "main": "index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --progress --mode development --display-error-details --colors"
   },
   "author": "@andrescabana86",
   "license": "MIT",
