--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "@andrescabana86",
   "license": "MIT",
   "devDependencies": {
+    "awesome-typescript-loader": "^5.2.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "typescript": "^2.9.2",
