--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "license": "MIT",
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.0",
+    "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "style-loader": "^0.21.0",
     "typescript": "^2.9.2",
     "webpack": "^4.12.1",
     "webpack-cli": "^3.0.8",
