--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "@andrescabana86",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^16.4.1",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.2",
     "awesome-typescript-loader": "^5.2.0",
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
@@ -16,7 +19,11 @@
     "mini-css-extract-plugin": "^0.4.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "style-loader": "^0.21.0",
+    "tslint": "^5.10.0",
+    "tslint-config-airbnb": "^5.9.2",
     "typescript": "^2.9.2",
     "webpack": "^4.12.1",
     "webpack-cli": "^3.0.8",
