--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "@andrescabana86",
   "license": "MIT",
   "devDependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.1.0",
+    "@fortawesome/react-fontawesome": "^0.1.0",
     "@types/react": "^16.4.1",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.2",
