--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "@andrescabana86",
   "license": "MIT",
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
     "@fortawesome/react-fontawesome": "^0.1.0",
     "@types/react": "^16.4.1",
